# qtcloud-course

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
.github/workflows/: build-cli.yml  publish-cli.yml
.quanttide/devops/: contract.yaml
assets/fixtures/: classes.json  programs.json
docs/: dev-guide.md
docs/add/: index.md
docs/api/: index.md
docs/drd/: README.md  class_teaching.md  program.md
docs/ixd/: course.md  dashboard.md  teaching.md
examples/: README.md  classroom.html
scripts/: record-studio-linux.sh
src/cli/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  TODO.md
src/cli/docs/: course.md  index.md  lesson.md  scene.md
src/cli/src/: blueprint.rs  config.rs  course.rs  lesson.rs  lib.rs  main.rs  preview.rs  provider.rs  scene.rs  types.rs
src/cli/tests/: cli_args.rs  integration.rs
src/cli/tests/fixtures/: invalid_blueprint.json  valid_blueprint.json
src/provider/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  go.mod  version.go
src/studio/: CHANGELOG.md  README.md  ROADMAP.md  TODO.md  pubspec.yaml
src/studio/assets/: assessments.json  classes.json  programs.json  students.json  submissions.json  teachers.json
src/studio/doc/: .gitkeep  README.md  architecture.md  data-model.md  testing.md  workflow.md
src/studio/integration_test/: app_test.dart  preview_test.dart
src/studio/lib/: main.dart  version.dart
src/studio/linux/: CMakeLists.txt
src/studio/test/: widget_test.dart
tests/: conftest.py  test_cli.py  test_fixtures.py  test_provider.py  test_studio.py
tests/fixtures/: README.md  classes.json  classroom.html  courses.json  lessons.json  phases.json  programs.json  scenes.json
tests/utils/: gui.py
topics/: learning_stats.md  libraries.md
(+77 files in other folders)
