[project]
name = "qtcloud-course"
version = "0.0.2"
description = "量潮课程云"
requires-python = ">=3.12"
dependencies = []

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=8",
    "opencv-python-headless",
    "numpy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
