[package]
name = "qtcloud-course-cli"
version = "0.1.0-beta.2"
edition = "2021"

[[bin]]
name = "qtcloud-course"
path = "src/main.rs"

[dependencies]
quanttide-agent = "0.1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
